deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: concierge-graphql-ingress
spec:
  rules:
    - host: concierge-graphql.test
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: concierge-graphql
              port:
                number: 9000
